# 2026-NASA3-Mail-Subscription

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
apps/accounts/: permissions.py  urls.py  views.py
apps/subscriptions/: models.py  serializers.py  tasks.py  tests.py  throttles.py  urls.py  views.py
apps/subscriptions/migrations/: 0001_initial.py  0002_add_flush_ldap_schedule.py
core/: mail.py  settings.py  urls.py
docs/: api.md  architecture.md  auth.md  database.md  ldap.md  open-decision.md  open-decisions.md  setup.md  structure.md  sync.md  testing.md
progress/bbwinner/: api.md  models.md
progress/chilfox/: admin-demo-procedure.md  demo-procedure.md  midterm-demo-problem.md  progress.md  testing-procedure.md  user-demo-procedure.md
progress/qwertypig/: structure.md
